# tmenu

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  tui.rs
src/filterer/: contains_filterer.rs  fuzzy_filterer.rs  mod.rs
